Page MenuHome GnuPG

Kleopatra: Result dialog does not have focus after operation
Closed, ResolvedPublic

Description

It has been reported that when the resultdialog has all actions completed the window is in the background. It seems to happen in practice that the result dialog is hidden in the background and users do not notice that a decryption is finished.

Since the fix for T5533 it should only require a Raise.

I have not yet reproduced this.

Event Timeline

aheinecke created this task.
ikloecker renamed this task from Kleopatra: Eesult dialog does not have focus after operation to Kleopatra: Result dialog does not have focus after operation.Jan 17 2022, 9:41 AM

On which OS resp. with which window manager does this problem occur?

This occurs on Windows. But if a raise is really missing, it might also occur with other window managers.

I'm also seeing this, but that's probably due to me using "focus follows mouse" and the pinentry being a different application. When the pinentry goes away the window manager gives focus to the window below the mouse which very often isn't Kleopatra when I have been testing keyboard navigation.

I'm wondering if this happens when users have made some other application window active. In this case, I'm pretty sure there is no way on Windows to bring the result dialog to the front. An alternative might be to use a notification to inform the user that the operation is completed, either always or only if we notice that the result dialog isn't active.

I have seen this when doing the following:

  • Start Kleopatra and minimize its window
  • Start decrypt&verify operation for an encrypted archive in Windows Explorer with GpgEX

Observation:

  • Nothing seems to happen. In fact, the result window opened behind the Windows Explorer window.

Note: I wasn't asked for a password (because it was still cached). But even if I'm asked for the password (pinentry opens on top of Windows Explorer) the result window still opened behind Windows Explorer.

This also happens if one activates the Kleopatra main window, then activates the Windows Explorer and then starts a decrypt&verify operation.

Funny enough, it does not happen if one activates the result window, discards it and starts another decrypt&verify operation. In this case the result window has always opened in the foreground in all tries.

Just in case it matters: I'm using the mouse for everything.

ikloecker moved this task from Restricted Project Column to Restricted Project Column on the Restricted Project board.
ikloecker changed the task status from Open to Testing.Dec 3 2024, 10:34 AM

For me the change fixes the problem on Windows. (I haven't checked if there was a problem on Linux/X11, but I have verified that the change also works on Linux/X11.)

I'll backport this because this issue is a really bad usability problem for people using the Windows Explorer integration to decrypt files. And the regression risk is minimal.

Backported for VSD 3.3.x / Gpg4win 4.4.1

I have seen this when doing the following:

Start Kleopatra and minimize its window
Start decrypt&verify operation for an encrypted archive in Windows Explorer with GpgEX

Observation:

Nothing seems to happen. In fact, the result window opened behind the Windows Explorer window.

Works fine in VSD-beta-478. Not sure if there's something else to test here

TobiasFella moved this task from QA to vsd-3.3.0 on the vsd33 board.
TobiasFella edited projects, added vsd33 (vsd-3.3.0); removed vsd33.

For me the change fixes the problem on Windows. (I haven't checked if there was a problem on Linux/X11, but I have verified that the change also works on Linux/X11.)

On WIndows apps seem to be able to let blink the corresponding icon in the taskbar if the app "has something to say". Maybe this would be an alternative approach to opening the windows in foreground.
While in general popup windows can be annoying, I think they are OK when followed by some user action that makes those more or less expected.