Ensure that decryption result dialog is visible

Use bringToForeground() to ensure that the dialog isn't hidden behind
other windows. This is also done by the other controllers.

GnuPG-bug-id: 5780
(cherry picked from commit cbe21024c974743f8169bca0ec7b022f9556dce9)